Fixed bug with letter-spacing

--- a/mini_fiction/frontend/src/css/partials/_typography.css
+++ b/mini_fiction/frontend/src/css/partials/_typography.css
@@ -14,7 +14,7 @@ h2,
 h3,
 h4 {
     font-weight: 300;
-    letter-spacing: var(calc(--thin-line * -1));
+    letter-spacing: calc(var(--thin-line) * -1);
     margin-bottom: 2rem;
     margin-top: 0;
 }
